--- a/src/package.json
+++ b/src/package.json
@@ -21,7 +21,8 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "slugify": "^1.6.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
