--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
 PRIVATE_KEY=jsontoken
 PORT=9000
-MONGODB_URI=mongodb://localhost/mindx-demo
+MONGODB_URI=mongodb+srv://admin:binh1996@cluster0.2ydfj.mongodb.net/food-store?retryWrites=true&w=majority
 EXPIRES_TIME=1d
